Fix top section alignment

--- a/source/features/clean-repo-sidebar.css
+++ b/source/features/clean-repo-sidebar.css
@@ -3,8 +3,11 @@
 	display: none;
 }
 
-/* Align description with main content */
-.rgh-clean-repo-sidebar .BorderGrid-row:first-of-type p {
+/* Align top of "About" section with main content */
+.rgh-clean-repo-sidebar .BorderGrid-row:first-of-type p,
+.rgh-clean-repo-sidebar .BorderGrid-row:first-of-type .mt-3:first-of-type,
+/* Targets repo-age link when it's the only one in the section */
+.rgh-clean-repo-sidebar .BorderGrid-row:first-of-type .mt-3:last-of-type:nth-of-type(2) {
 	margin-top: 0 !important;
 }
 
